roles/cert_manager/files/network-policy-namespace.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cert-manager-namespace"
  namespace: cert-manager
spec:
  description: "Allow cert-manager namespace traffic"
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}
