roles/cert_manager/files/network-policy-remote-node.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-policy"
  namespace: cert-manager
spec:
  description: "Webhook remote-node ingress"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: webhook
      app.kubernetes.io/instance: cert-manager
  ingress:
  - fromEntities:
      - remote-node
